[package]
name = "toodoo"
version = "0.1.0"
edition = "2024"
description = "A toodoo list with add, remove and task status check"
license = "MIT"
repository = "https://github.com/Lightx0x/toodoo"
readme = "README.md"
keywords = ["cli", "toodoo", "task", "text"]
categories = ["command-line-utilities"]
exclude = ["expanded.rs", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
