[package]
name = "toodoo"
version = "0.1.1"
edition = "2024"
description = "A small command-line todo list, written in Rust."
license = "MIT"
repository = "https://github.com/Lightx0x/toodoo"
readme = "README.md"
keywords = ["cli", "toodoo", "task", "text"]
categories = ["command-line-utilities"]
exclude = ["expanded.rs", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
